# tasker-core-rs

./: .clippy.toml  .dockerignore  .env.dev.example  .env.template  .env.web_test  .gitignore  AGENTS.md  AUTHORS.md  Brewfile  CHANGELOG.md  CHANGES_SUMMARY.md  CLAUDE.md  CODE_OF_CONDUCT.md  Cargo.toml  DEVELOPMENT_MEMORY.md  Dockerfile  Dockerfile.postgres-extensions  LICENSE  MEMORY.md  Makefile.toml  PROJECT_STATUS.md  PR_DESCRIPTION.md  README.md  TESTING_ARCHITECTURE.md  coverage-thresholds.json  docker-compose.dev.yml  docker-compose.yml  docker-dev.sh  recipe.json  tasker-config.yaml  test_config_verification.rs  test_deprecation_warnings.rs  test_integration.sh  test_tcp_debug.rb  test_timeout_verification.rs  test_worker_registration.rb
pgmq-notify/: Cargo.toml  Makefile.toml
pgmq-notify/src/: channel_metrics.rs  client.rs  config.rs  emitter.rs  error.rs  events.rs  lib.rs  listener.rs  types.rs
pgmq-notify/tests/: README.md  basic_wrapper_test.rs  common.rs  complete_wrapper_flow_test.rs  comprehensive_integration_test.rs
tasker-client/: Cargo.toml  Makefile.toml  askama.toml
tasker-client/.sqlx/: query-03d18bbfa7329929f90c9ce28f01cf649b4d380f8fa59b027c7b6a1140f89469.json  query-04f74abdebcb0e239b03c515a309a14f04caf0e3d958887814f77c42ffb8351b.json  query-053d1062e52c7fee4dc6f05995022115f68c80058c33e8436ddfc05a834e44eb.json  query-06c2b203c00eb540cc0e9acac14c494bb6db6a4398239c5b0abe0eacd1a445f2.json  query-125a1e249cfee51e9cf3342badff7b7bbb272d2c231c0daf873d203f6d043fa4.json  query-176563aa1cff279f4a6daaa13bba6ec9f75a0f79d913503215a10ae57cdd0fb3.json  query-186f3d8c295fd63a98b7080d5778c59b638ea365c52e4d32d671bb963b91f91b.json  query-18bb9fd64845db53bea2c9881b8b11faf2061487e742fdb78c067c7d41837ee4.json  query-24aae1689a4821f8f4eb546243d7662f8f00d20adf5aa3abcab6566f67ba97cc.json  query-26876d25b817d855888db80e20e9a0baab5f2f80250895c68d373129de43a496.json  query-34f4968f88dcd81d915eb49090c4bf95853f5384304e0d3773ea48fee0269b26.json  query-4f115cd667118058d33198a016891418e8149b97d0f0b96417d19ea2140833ce.json  query-5332832f9ff72a21a39addef9e3a266ff9656bbfd99ea64193fa48a754646973.json  query-55ff802e454f74eaaa67fd4f840efbbe923579c08d88eb9d6857a8737a8fe0b3.json  query-56ef1080b808e82c8f8ae0b5d78629163356011f7d114bc0556afb6cafd2a0ba.json  query-593fbc47090a608fd94cd6b239e5169aad38d6f53ef0cd07e1918bbce62ffbf5.json  query-5b524d02a0a326cd993a3142089ce0dbb22163850649bbe1d4e301652927891f.json  query-5eeca99fb75e6438a9c2945de66b8a6a48456d9af7c4b90b1e4a39f7dcc2ac12.json  query-612dfee86b684a2f883cb5501ea996be2472427932be39a5be1092614d60d3e8.json  query-7c0d3135e871fdd128cb0734a594034758fc2aa8afc524be499f6fe68c98c931.json  query-86571ed2399211507eb226dba3d5ce0daf7ccac6f8534ac794131dad44acf5e8.json  query-87b39e979e04b6a046e00d10f7da909c9f9948ee6fba95c9636881be218ab170.json  query-90cb50f13b57c9ce553219662dcc0501744f0861c4abf524ecd5b886238b6d29.json  query-9739c288880be2a6089ee158bfe3a48105b02bd440bb05ddc74c007a81c6d731.json  query-b4cd2e3a3c1b52356f151a5f57bf939d886b6662f3a0ea1e39d7a93d851b92d1.json  query-be534f6c64f24283ccc4c6afd36930aa198c10bbf0066fa5e813e169e391213c.json  query-bf789db8017cbd5856ae123ac66c0ab444d72c6543d74dd42cb179bcee2cd306.json  query-c67bf9ebbc4cd24dfca12d849e5f81a1340e932631ad625b915b09bbb3f09830.json  query-c973ab09bae225d917ab2fae7c24dff3e27d67f672d08b93d124a20469c0d370.json  query-d4576e79c585d882c9ec5bff1e46965701e613c418e8a80dc19db410ea90409c.json  query-d97c1f73518f99151601a365d5dc28730a484817f1fd218f978f36bdd0723b13.json  query-dbb01ca5e4758fe12fb22bbc46f183ceea730d3b5fd804b40fee0d3b035447a4.json  query-e5d67c84956aee2bb07cfaa727bb38ecc19f4ffc4cc0952c77491373c885cf4e.json  query-eb9d7c07d32aa7ca3f878d1797accb36cbdf0af0d2cc698213eb28c4915c3ff3.json  query-f13629490e2db6c01b3050494e63a32f1f48bbdc492ead06a2653f57a92973a0.json  query-f32b6cf679d380ef0556f4dbf91a6724f5891e2c8a52cfbcc394105df2c61c3e.json  query-f948471d3e0372b303f456d26caeeb44cb99cbb467d4b42a9c38f6a4b69542f8.json
tasker-client/benches/: task_initialization.rs
tasker-client/src/: config.rs  error.rs  lib.rs  transport.rs
tasker-client/templates/: _parameter-detail.md  annotated-config.toml  base.md  config-reference.md  doc-index.md  parameter-explain.txt  section-detail.md
tasker-client/tests/: config_commands_test.rs
tasker-orchestration/: AGENTS.md  Cargo.toml  Makefile.toml  docker-compose.dev.yml  fix_remaining_errors.sh  recipe.json
tasker-orchestration/.sqlx/: query-01254858a7cc1cf6cd732935ffb89c83c1708ed2abc07a8540f931a7fd109035.json  query-02c474010c6e59766f64ee16d948915dc5c46817c817738732f0c739475f3075.json  query-0aca3ee74a13209abfb2085d6217e39881a967968acc71a665522447302037a4.json  query-12c491a0a6d27e276612fd4eb179339417d715ddbb0a378674612159b9d520f6.json  query-1ab3a835bfd09e081ca32ff4908f78847aaf3cced0f6c7a3922e377f865e257e.json  query-1ab79ba0c41485d3d51ceec3ea61e130844dd31cc8d991de29419b61ea5cc120.json  query-23420f19e02d78fe3106bd09cce8e6e63fe0ae650c35ee67d659ee95b7eaa168.json  query-23780e3a70548ec907133eac27c9683f3ea9ff1b71b49c42c86d9630ecc552d0.json  query-295dccbaa35fd27d3b0e8f1cc06de43393837459713dbf77af519f83095ea0c3.json  query-29de219f76f0e38f61363b2593ee42381b7b1a3bba1c1dfe7bf5732a5a413cde.json  query-2bcf5c29f88b051b7a626263a2b643e7695104688591144cf5f42ded3b9016c5.json  query-2e15824fe6f6c3bdfae337880a2e2444f9bcca1998408a028b87ac47645e475c.json  query-2febfe797c6f285db6a84164f987d31ee8d796e872a52d9bb85a7140f308d751.json  query-37d5db1fda8b425f2928bb52f8d9914bda6d4eb2b9beb2a391fe6773693db31d.json  query-387675447bc3e521af13a1d3d396e1608844fb5657a0aaae4b635266a6b2c46f.json  query-3bf92e99d687871831f5512980a2797f5acda1f28f6fc8e1b257155ddf95d3c0.json  query-3c879c2c75cfbd654f1cb0c682c03a2b3e678f211bb4866e2c5637cb73e54fa0.json  query-3dfe42cc7a1201ab14d7cb136e2b56f492935d3abbaaaa1f2ff7e1d684a48bf4.json  query-40a1d61f18bb488f4578da484b6acc95d26bb8625af081b3347dddf57f5b53dd.json  (+64 more)
tasker-orchestration/benches/: orchestration_benchmarks.rs  (+1 more)
tasker-shared/: Cargo.toml  Makefile.toml  build.rs
tasker-worker/: AGENTS.md  Cargo.toml  Makefile.toml
(+4224 files in other folders)
