[package]
name = "tasker-core"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust core for workflow orchestration"
readme = "README.md"
repository = "https://github.com/tasker-systems/tasker-core"
license = "MIT"
keywords = ["async", "orchestration", "performance", "task", "workflow"]
categories = ["concurrency", "database", "web-programming"]

[workspace]
members = [
  ".",  # Current crate temporarily remains during migration
  "pgmq-notify",
  "tasker-client",
  "tasker-orchestration",
  "tasker-shared",
  "tasker-worker",
  "workers/ruby/ext/tasker_core",
  "workers/rust",
  "workers/python",  # TAS-72: PyO3 Python worker
  # "workers/wasm",    # Future
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
# Web framework and HTTP server (TAS-28)
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
bigdecimal = { version = "0.4", features = ["serde"] }
# Builder pattern with inline defaults for configuration structs
bon = "3.8"
# Coverage tools (used in CI)
cargo-llvm-cov = "0.6"
# Time and date handling
chrono = { version = "0.4.38", features = ["serde"] }
# CLI tool dependencies
clap = { version = "4.5", features = ["derive"] }
# Configuration
config = "0.15"
criterion = { version = "0.8.1" }
# dashmap = "6.1"
crossbeam = "0.8"
# Derive macros for common traits (Display, Default, From, etc.)
derive_more = { version = "2.0.1", default-features = false, features = ["display", "from", "as_ref"] }
dotenvy = "0.15"  # For loading .env files
# Random number generation
fastrand = "2.0"
futures = "0.3"
# TTY detection for ANSI colors
is-terminal = "0.4"
jsonwebtoken = { version = "9" }
# FFI support to be added in bindings and workers
magnus = "0.8"
# Utility dependencies
once_cell = "1.19"
opentelemetry = "0.31"
opentelemetry-appender-tracing = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "logs"] }
opentelemetry-prometheus-text-exporter = "0.2"
# rt-tokio: Telemetry tasks run on shared tokio runtime (lower overhead, sufficient for I/O-bound workloads)
# Alternative: rt-tokio-current-thread creates separate runtime (higher isolation, higher resource cost)
# Our choice: rt-tokio works well for async I/O-bound orchestration without CPU-intensive workloads
opentelemetry_sdk = { version = "0.31", features = [
  "metrics",
  "rt-tokio",
  "trace"
] }
opentelemetry-semantic-conventions = "0.31"
# Message queue management
pgmq = "0.31.1"
pgmq-notify = { path = "pgmq-notify" }
rand = "0.9.1"
regex = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rsa = { version = "0.9" }
rust_decimal = { version = "1.37", features = ["serde-with-str"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serial_test = "3.1"
# Database and ORM
sqlx = { version = "0.8", features = [
  "bigdecimal",
  "chrono",
  "json",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio-rustls",
  "uuid",
] }
# System information
sysinfo = "0.37"
tempfile = "3.0"
# Error handling
thiserror = "2.0"
# Async runtime and utilities
tokio = { version = "1.46", features = ["full"] }
# Testing tools
tokio-test = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.9"
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "timeout", "trace"] }
# Logging and telemetry
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.0"
# OpenAPI documentation
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
uuid = { version = "1.11", features = ["serde", "v4", "v7"] }
validator = { version = "0.19", features = ["derive"] }
workspace_tools = { version = "0.2.0", features = ["full"] }
# pyo3 = { version = "0.25", optional = true, features = ["extension-module"] }
# wasm-bindgen = { version = "0.2", optional = true }
# wasm-bindgen-futures = { version = "0.4", optional = true }
# js-sys = { version = "0.3", optional = true }
# web-sys = { version = "0.3", optional = true }

# Workspace-level linting configuration (TAS-58)
# Based on Microsoft Universal Guidelines and Rust API Guidelines
# See: https://microsoft.github.io/rust-guidelines/guidelines/universal/
# See: https://rust-lang.github.io/api-guidelines/checklist.html
#
# Strategy: Incremental enablement - Start with essentials, enable more over time
# Current Status: Phase 1 - Essential lints only

[workspace.lints.clippy]
# Phase 2: Cargo metadata (ENABLED - already fixed)
cargo = { level = "warn", priority = -1 }
# Phase 1: Critical categories (ENABLED)
correctness = { level = "warn", priority = -1 }  # Bug prevention
# Phase 3: Categories to enable incrementally (COMMENTED OUT)
# complexity = { level = "warn", priority = -1 }   # Enable when: Ready for complexity refactoring
# perf = { level = "warn", priority = -1 }        # Enable when: Ready for performance improvements
# style = { level = "warn", priority = -1 }       # Enable when: Ready for style consistency
# pedantic = { level = "warn", priority = -1 }    # Enable when: Ready for all pedantic warnings
# Phase 4: High-priority restriction lints (ENABLED)
dbg_macro = "warn"  # No debug prints in production
module_inception = "allow"  # Sometimes necessary for re-exports
multiple_crate_versions = "allow"  # Expected during migration
suspicious = { level = "warn", priority = -1 }  # Likely bugs
undocumented_unsafe_blocks = "warn"  # Safety documentation required
# Phase 5: Safety and correctness restriction lints (COMMENTED OUT - Enable next)
# allow_attributes_without_reason = "warn"
# as_underscore = "warn"
# map_err_ignore = "warn"
# unnecessary_safety_comment = "warn"
# unnecessary_safety_doc = "warn"
# Phase 6: Code quality restriction lints (COMMENTED OUT - Enable later)
# assertions_on_result_states = "warn"
# clone_on_ref_ptr = "warn"
# deref_by_slicing = "warn"
# disallowed_script_idents = "warn"
# empty_drop = "warn"
# empty_enum_variants_with_brackets = "warn"
# empty_structs_with_brackets = "warn"
# fn_to_numeric_cast_any = "warn"
# if_then_some_else_none = "warn"
# redundant_type_annotations = "warn"
# renamed_function_params = "warn"
# semicolon_outside_block = "warn"
# string_to_string = "warn"
# unneeded_field_pattern = "warn"
# unused_result_ok = "warn"
# Permanent exceptions (legitimate cases)
uninlined_format_args = "allow"  # Mixed format args acceptable for readability

[workspace.lints.rust]
# Phase 1: Essential compiler lints (ENABLED)
missing_debug_implementations = "warn"
redundant_imports = "warn"
unsafe_op_in_unsafe_fn = "warn"

# Phase 2: Additional compiler lints (COMMENTED OUT - Enable next)
# ambiguous_negative_literals = "warn"
# redundant_lifetimes = "warn"
# trivial_numeric_casts = "warn"
# unused_lifetimes = "warn"

[lib]
crate-type = ["rlib"]
name = "tasker_core"
path = "src/lib.rs"

[[bench]]
harness = false
name = "e2e_latency"
path = "tests/benches/e2e_latency.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
# Root crate has no library code - all dependencies moved to dev-dependencies
# This prevents circular dependencies and keeps workspace crates independent

[dev-dependencies]
# Test utilities
anyhow = { workspace = true }
chrono = { workspace = true }
# Keep bin/config-validator dependencies
clap = { workspace = true }
criterion = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
serial_test = { workspace = true }
sqlx = { workspace = true }
# E2E tests need workspace crates
tasker-client = { path = "tasker-client" }
tasker-orchestration = { path = "tasker-orchestration" }
tasker-shared = { path = "tasker-shared" }
tasker-worker = { path = "tasker-worker" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[features]
benchmarks = [
  # "tasker-orchestration/benchmarks",
  # "tasker-shared/benchmarks",
  # "tasker-worker/benchmarks",
]
test-utils = [
  "tasker-orchestration/test-utils",
  "tasker-shared/test-utils",
  "tasker-worker/test-utils",
]

[lints]
workspace = true

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
strip = true
lto = "fat"
panic = "abort"
codegen-units = 1

# Coverage profile (matches CI)
[profile.coverage]
inherits = "dev"
debug = true
overflow-checks = false
incremental = false
codegen-units = 1
