[package]
name = "pgmq-notify"
version = "0.1.0"
edition = "2021"
authors = ["Pete Taylor <pete.jc.taylor@hey.com>"]
description = "PG Notify layer for PGMQ"
license = "MIT"

[lib]
name = "pgmq_notify"
crate-type = ["rlib"]

[[bin]]
name = "pgmq-notify-cli"
path = "src/bin/cli.rs"


[dependencies]
# Core async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Database - sqlx for pg_notify support, pgmq for queue traits
sqlx = { workspace = true }
pgmq = { workspace = true }

# Serialization - minimal for event payloads
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling - for timestamps in events
chrono = { workspace = true }
uuid = { workspace = true }

# Error handling 
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Pattern matching for namespace extraction
regex = { workspace = true }

# CLI tool dependencies
clap = { version = "4.5", features = ["derive"] }
toml = { workspace = true }

[dev-dependencies]
# Testing tools
tokio-test = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
insta = { workspace = true }
mockall = { workspace = true }
factori = { workspace = true }
url = { workspace = true }
serial_test = { workspace = true }

# Coverage tools (used in CI)
cargo-llvm-cov = { workspace = true }

[features]
default = ["sqlx-support"]
sqlx-support = []  # Feature for sqlx::PgListener integration
